<resources>
    <string name="app_name">TaskHive</string>

    <string name="language_settings_title">App Language</string>
    <string name="language_settings_description">Change Application Language</string>

    <string name="themes_settings_title">Themes </string>
    <string name="themes_settings_description">Switch Themes</string>

    <string name="account_settings_title">Manage Account</string>
    <string name="account_settings_description">Update Personal Information</string>

    <string name="notification_settings_title">Reminder Preferences</string>
    <string name="notifications_settings_description">Notifications, Reminders </string>

    <string name="accessibility_settings_title">Accessibility </string>
    <string name="accessibility_settings_description">Text Size, Screen reader, contrast</string>

    <string name="help_settings_title">Help Section</string>
    <string name="help_settings_description">Guides, FAQs</string>

    <string name="register_account_text">Register Account</string>
    <string name="login_text">Login</string>
    <string name="create_account_text">Create Account</string>

    <string name="email_address_text">Email Address</string>
    <string name="password_text">Password</string>
    <string name="date_of_birth_text">Date of Birth</string>
    <string name="name_text">Enter Name</string>
    <string name="invalid_email_address">Invalid Email Address</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="invalid_name">Please Enter Name</string>
    <string name="invalid_dob">Invalid Date of Birth</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>