<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.activities.SignUpActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.05"
        android:orientation="horizontal"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/filled_rectangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.3"
        android:orientation="horizontal"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/cardView_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.15"
        android:orientation="horizontal"
        />

    <View
        android:id="@+id/top_color"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/filled_rectangle"

        android:background="@drawable/rectangle"
        />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:letterSpacing="0.03"
        android:fontFamily="@font/abeezee"
        android:textColor="@color/white"
        android:textSize="@dimen/title_textSize"
        android:text="@string/register_account_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cardView_top"
        app:layout_constraintTop_toBottomOf="@id/guideline_registerTextView"
        />

    <com.google.android.material.card.MaterialCardView

        android:id="@+id/signupCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="15dp"

        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/cardView_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_edittext_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0.05"
                android:orientation="vertical"
                />
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_edittext_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0.95"
                android:orientation="vertical"
                />
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_email_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0.05"
                android:orientation="horizontal"
                />
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_password_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0.30"
                android:orientation="horizontal"
                />
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_dob_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0.55"
                android:orientation="horizontal"
                />
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0.80"
                android:orientation="horizontal"
                />
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_signupButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0."
                android:orientation="horizontal"
                />
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0."
                android:orientation="horizontal"
                />
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_account_exists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0."
                android:orientation="horizontal"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_inputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="0dp"
                app:errorEnabled="true"
                app:errorContentDescription="@string/invalid_email_address"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                app:endIconMode="clear_text"
                app:boxCornerRadiusTopStart="@dimen/textinputlayout_cornerRadius"
                app:boxCornerRadiusTopEnd="@dimen/textinputlayout_cornerRadius"
                app:boxCornerRadiusBottomStart="@dimen/textinputlayout_cornerRadius"
                app:boxCornerRadiusBottomEnd="@dimen/textinputlayout_cornerRadius"
                android:hint="@string/email_address_text"
                app:layout_constraintStart_toStartOf="@id/guideline_edittext_left"
                app:layout_constraintEnd_toEndOf="@id/guideline_edittext_right"
                app:layout_constraintTop_toTopOf="@id/guideline_email_layout"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_editText"
                    android:layout_width="match_parent"


                    android:textSize="15sp"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"


                    android:drawableTint="#282525"
                    android:drawableStart="@drawable/email_icon1"
                    android:drawablePadding="10dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_inputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="password_toggle"
                android:layout_marginTop="@dimen/inputLayout_marginTop"
                app:errorEnabled="true"
                app:errorContentDescription="@string/invalid_password"
                app:boxCornerRadiusTopStart="@dimen/textinputlayout_cornerRadius"
                app:boxCornerRadiusTopEnd="@dimen/textinputlayout_cornerRadius"
                app:boxCornerRadiusBottomStart="@dimen/textinputlayout_cornerRadius"
                app:boxCornerRadiusBottomEnd="@dimen/textinputlayout_cornerRadius"
                android:hint="@string/password_text"
                app:layout_constraintStart_toStartOf="@id/guideline_edittext_left"
                app:layout_constraintEnd_toEndOf="@id/guideline_edittext_right"
                app:layout_constraintTop_toBottomOf="@id/email_inputLayout"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_editText"
                    android:layout_width="match_parent"

                    android:textSize="15sp"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"

                    android:drawableStart="@drawable/lock2"
                    android:drawablePadding="15dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_inputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"


                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="clear_text"
                android:layout_marginTop="@dimen/inputLayout_marginTop"
                app:errorEnabled="true"
                app:errorContentDescription="@string/invalid_name"
                app:boxCornerRadiusTopStart="@dimen/textinputlayout_cornerRadius"
                app:boxCornerRadiusTopEnd="@dimen/textinputlayout_cornerRadius"
                app:boxCornerRadiusBottomStart="@dimen/textinputlayout_cornerRadius"
                app:boxCornerRadiusBottomEnd="@dimen/textinputlayout_cornerRadius"
                android:hint="@string/name_text"
                app:layout_constraintStart_toStartOf="@id/guideline_edittext_left"
                app:layout_constraintEnd_toEndOf="@id/guideline_edittext_right"
                app:layout_constraintTop_toBottomOf="@id/password_inputLayout"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_editText"
                    android:layout_width="match_parent"
                    android:textSize="15sp"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"

                    android:drawableStart="@drawable/account_icon"
                    android:drawablePadding="15dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/role_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select role :"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="@id/guideline_edittext_left"
               android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/name_inputLayout" />

            <RadioGroup
                android:id="@+id/role_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"

                app:layout_constraintTop_toTopOf="@id/role_text"
                app:layout_constraintBottom_toBottomOf="@id/role_text"
                app:layout_constraintStart_toEndOf="@id/role_text"
                >

                <RadioButton
                    android:id="@+id/radio_student"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Student"
                    android:checked="true"
                    android:layout_marginEnd="16dp"
                    />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_teacher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Teacher" />
            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registerButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_margin="20dp"
                android:letterSpacing="0.03"
                android:textAllCaps="false"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/create_account_text"
                android:textSize="18sp"
                android:textStyle="bold"

               android:layout_marginBottom="20dp"
                app:cornerRadius="10dp"
                app:layout_constraintTop_toBottomOf="@id/role_radio_group"
                app:layout_constraintEnd_toEndOf="@id/guideline_edittext_right"
                app:layout_constraintStart_toStartOf="@id/guideline_edittext_left" />


            <TextView
                android:id="@+id/account_exists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="Already Registered ?"


                app:layout_constraintTop_toBottomOf="@id/registerButton"
                android:layout_marginStart="80dp"
                app:layout_constraintStart_toStartOf="@id/registerButton" />
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textAlignment="textStart"
                android:layout_margin="0dp"
                android:paddingStart="10dp"
                android:textAllCaps="false"
                android:onClick="startLoginActivity"
                android:fontFamily="@font/abeezee"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                app:layout_constraintStart_toEndOf="@id/account_exists"
                app:layout_constraintTop_toTopOf="@id/account_exists"
                app:layout_constraintBottom_toBottomOf="@id/account_exists"/>
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>